fix: configuration and add logger